# roff

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  roff  setup.py
docs/: roff.1.md  roff.5.md
src/roff/: __init__.py  __main__.py  _images.py  _util.py  convert.py
src/roff/__cli__/: __init__.py  convert.py  from_parser.py  template.py  tree.py  util.py  watch.py
src/roff/_markdown/: __init__.py  command.py  front_matter.py
